# carpool-or-tools-solver

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
scripts/: build.sh  run.py
src/: car_pool.py  car_pool_solver.py  handler.py
src/constraints/: input.py
src/constraints/hard/: assign_person_to_only_one_car.py  owner_drives_when_passengers.py  seats_quantity.py
src/constraints/soft/: maximize_seated_people.py  minimize_cars.py
src/data/: car.py  person.py  solver_results.py
src/utils/: cp_helper.py  solutionner.py  vars_manager.py
tests/: helpers.py  test_solve.py
tests/mocks/: impossible.json  one_car.json  overflow.json  three_cars.json  two_cars.json
