[project]
name = "carpool-or-tools-solver"
version = "0.1.0"
description = "Carlpool problem solver using CP-SAT Solver from Google OR-Tools"
authors = [
    {name = "Eric Matte", email = "eric_matte@outlook.com"},
]
dependencies = [
    "ortools>=9.8.3296",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]  # This is dev dependencies
testing = [
    "pytest>=7.4.4",
    "pyright>=1.1.370",
]

[tool.pdm.scripts]
start = "scripts/run.py"
test = "pytest --durations=0 --disable-warnings"
test_logs = "pdm test -o log_cli=true -o log_cli_level=DEBUG -o log_cli_format='%(levelname)s\t%(message)s' --show-capture=stdout"
typecheck = "pyright"

[tool.black]
line-length = 140